; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_cse.c_check_dependence.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_cse.c_check_dependence.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.check_dependence_data = type { i32, i32, i32 }

@cse_rtx_varies_p = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*)* @check_dependence to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_dependence(i32* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.check_dependence_data*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = bitcast i8* %7 to %struct.check_dependence_data*
  store %struct.check_dependence_data* %8, %struct.check_dependence_data** %6, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = load i32, i32* %9, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %31

12:                                               ; preds = %2
  %13 = load i32*, i32** %4, align 8
  %14 = load i32, i32* %13, align 4
  %15 = call i64 @MEM_P(i32 %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %31

17:                                               ; preds = %12
  %18 = load %struct.check_dependence_data*, %struct.check_dependence_data** %6, align 8
  %19 = getelementptr inbounds %struct.check_dependence_data, %struct.check_dependence_data* %18, i32 0, i32 2
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.check_dependence_data*, %struct.check_dependence_data** %6, align 8
  %22 = getelementptr inbounds %struct.check_dependence_data, %struct.check_dependence_data* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 4
  %24 = load %struct.check_dependence_data*, %struct.check_dependence_data** %6, align 8
  %25 = getelementptr inbounds %struct.check_dependence_data, %struct.check_dependence_data* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = load i32*, i32** %4, align 8
  %28 = load i32, i32* %27, align 4
  %29 = load i32, i32* @cse_rtx_varies_p, align 4
  %30 = call i32 @canon_true_dependence(i32 %20, i32 %23, i32 %26, i32 %28, i32 %29)
  store i32 %30, i32* %3, align 4
  br label %32

31:                                               ; preds = %12, %2
  store i32 0, i32* %3, align 4
  br label %32

32:                                               ; preds = %31, %17
  %33 = load i32, i32* %3, align 4
  ret i32 %33
}

declare dso_local i64 @MEM_P(i32) #1

declare dso_local i32 @canon_true_dependence(i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
